kubernetes/staging/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: trivyhub-staging
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
