kubernetes/staging/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivyhub
  namespace: trivyhub-staging
  labels:
    app: trivyhub
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivyhub
  template:
    metadata:
      labels:
        app: trivyhub
        env: staging
    spec:
      containers:
        - name: trivyhub
          image: ghcr.io/theo-mrn/trivy-dashboard-web:stag  # updated by CI
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trivyhub
  namespace: trivyhub-staging
spec:
  selector:
    app: trivyhub
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trivyhub
  namespace: trivyhub-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stag.trivyhub.cluster.afflair.app`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: trivyhub
          port: 3000
  tls:
    certResolver: letsencrypt
